--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
         <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div id="map"></div>
-        <script src="https://cdnjs.com/libraries/jquery/1.9.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
         <script src='https://api.mapbox.com/mapbox.js/plugins/geo-viewport/v0.1.1/geo-viewport.js'></script>
         <script src='https://api.mapbox.com/mapbox.js/plugins/geojson-extent/v0.0.1/geojson-extent.js'></script>
+    </head>
+    <body>
+        <div id="map"></div>
         <script src="script.js"></script>
     </body>
 </html>
