--- a/index.html
+++ b/index.html
@@ -4,15 +4,51 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
         <link rel="stylesheet" href="style.css">
+        <!-- Utility -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/lodash/4.5.0/lodash.min.js"></script>
+        <!-- Mapbox.js -->
         <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
         <script src='https://api.mapbox.com/mapbox.js/plugins/geo-viewport/v0.1.1/geo-viewport.js'></script>
         <script src='https://api.mapbox.com/mapbox.js/plugins/geojson-extent/v0.0.1/geojson-extent.js'></script>
+        <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.min.js'></script>
+        <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.mapbox.css' rel='stylesheet' />
+<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/css/font-awesome.min.css' rel='stylesheet' />
+        <!-- Bootstrap -->
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <!-- Optional theme -->
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"> -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/darkly/bootstrap.min.css">
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div id="map"></div>
-        <div id="footer"><h3>The footer duke! The footer!</div>
+        <!-- Nav tabs -->
+        <div id="nav_div">
+            <ul class="nav nav-pills navbar-fixed-bottom"  id="tablist">
+              <li class="active">
+                <a href="#map_tab" data-toggle="pill">
+                  <span class="glyphicon glyphicon-globe"></span>
+                </a>
+              </li>
+              <li>
+                  <a href="#catalog_tab" data-toggle="pill">
+                    <span class="glyphicon glyphicon-th-list"></span>
+                  </a>
+              </li>
+              <li>
+                  <a href="#about_tab" data-toggle="pill">
+                    <span class="glyphicon glyphicon-info-sign"></span>
+                  </a>
+              </li>
+            </ul>
+        </div>
+        <div class="tab-content" id="tabcontent">
+            <div class="tab-pane active" id="map_tab"><div id="map"></div></div>
+            <div class="tab-pane" id="catalog_tab"><h3>the catalog content</h3></div>
+            <div class="tab-pane" id="about_tab"><h3>about content and link to pdf</h3></div>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
