--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/darkly/bootstrap.min.css">
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
     </head>
     <body>
         <!-- Nav tabs -->
@@ -51,8 +52,13 @@
                 <ul class="list-group" id="catalog-list"></ul>
               </div>
             </div>
-            <div class="tab-pane" id="about_tab"><h3>about content and link to pdf</h3></div>
+            <div class="tab-pane" id="about_tab">
+              <div id="about-content">
+                <h4><a href="https://github.com/gatesofmemphis/oldforestapp/raw/master/OldForestFinalReport.PDF">Download the Old Forest Report</a></h2>
+              </div>
+              <div id="app-link"></div>
+            </div>
         </div>
-        <script src="script.js"></script>
+        
     </body>
 </html>
