Apply filter via taxon id

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="nav_div">
             <ul class="nav nav-pills navbar-fixed-bottom"  id="tablist">
               <li class="active">
-                <a href="#map_tab" data-toggle="pill">
+                <a href="#map_tab" id='map_link' data-toggle="pill">
                   <span class="glyphicon glyphicon-globe"></span>
                 </a>
               </li>
